# mailer-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
mailer_sdk/: __init__.py  mailer.py
tests/: test_mailer.py
