[build-system]
requires      = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "mailer-sdk"
version         = "1.0.0"
description     = "A simple, production-ready Python SDK for sending emails via SMTP"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.8"
authors         = [{ name = "Your Name", email = "you@gmail.com" }]
keywords        = ["email", "smtp", "mailer", "sdk", "gmail", "outlook"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero third-party dependencies — pure stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "twine>=4.0",
    "build>=1.0",
]

[project.urls]
Homepage      = "https://github.com/yourusername/mailer-sdk"
Documentation = "https://github.com/yourusername/mailer-sdk#readme"
Repository    = "https://github.com/yourusername/mailer-sdk"
"Bug Tracker" = "https://github.com/yourusername/mailer-sdk/issues"
Changelog     = "https://github.com/yourusername/mailer-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailer_sdk*"]
